--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -6,6 +6,10 @@
     <title>my first webpage1</title>
 </head>
 <body>
+    <h1>My First Webpage</h1>
+    <h2>Written with a little guidance from Moringa School</h2>
+
+    
     <p>Hello,world!</p>
     <p>welcome to my first website!</p>
     
