--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h1>My First Webpage</h1>
-    <h2>Written with a little guidance from Moringa School</h2>
+    <h2>Written with a little guidance from <em>Moringa School</em></h2>
 
 
     <p>Hello,world!</p>
-    <p>welcome to my first website!</p>
+    <p>welcome to my <strong>first web page</strong>!</p>
 
     <p>Here are some things I'm going to learn about coding:</p>
     <ul>
@@ -20,6 +20,10 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
+
+    <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+
+    <img src="/images/elephant.jpeg" alt="a photo of an elephant">
     
 </body>
 </html>
