styling my page using css

--- a/my-favourite-things.html
+++ b/my-favourite-things.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>favourite things</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+    <img src="./images/coding.jpeg" alt="i love coding">
+    <img src="./images/arsenal.jpeg" alt="i love football">
     <h1>My favourite things</h1>
     <ol>
         <li>coding</li>
@@ -19,7 +22,7 @@
         <li>playing soccer</li>
     </ul>
 
-    <p>i always like coding and teamwork</p>
+    <p>i always like <strong>coding</strong> and <em>teamwork</em></p>
     
 </body>
 </html>
