--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first webpage1</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <h1>My First Webpage</h1>
@@ -23,7 +24,7 @@
 
     <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
 
-    <img src="/images/elephant.jpeg" alt="a photo of an elephant">
+    <img src="./images/elephant.jpeg" alt="a photo of an elephant">
     
 </body>
 </html>
